# qt_mpv

./: .gitmodules  CMakeLists.txt  README.md  build_mingw.sh  main.cpp  mainwindow.cpp  mainwindow.h  mpvwidget.cpp  mpvwidget.h
